clear build.gradle.kts, remove unnessecary comments,fix small bug